--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-button": "^1.2.1",
     "react-native-gifted-spinner": "0.0.3",
     "react-native-google-places-autocomplete": "^1.1.6",
+    "react-native-overlay": "^0.4.2",
     "react-timer-mixin": "^0.13.3",
     "validator": "^4.4.0"
   }
