--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "apsl-react-native-button": "^2.4.2",
     "moment": "^2.10.6",
     "react-native-button": "^1.2.1",
+    "react-native-checkbox": "^1.0.8",
     "react-native-gifted-spinner": "0.0.3",
     "react-native-google-places-autocomplete": "^1.1.6",
     "react-native-overlay": "^0.4.2",
